--- a/src/styles/new.css
+++ b/src/styles/new.css
@@ -45,3 +45,66 @@ Add all new styles here (reset, plugin, utility, component) so they are easy to 
  * Supports
  *
  */
+
+
+/*
+ *
+ * Custom checkboxes
+ *
+ */
+
+/* See: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_checkbox */
+
+/* The container */
+.custom-checkbox {
+    display: inline-block;
+    position: relative;
+    padding-left: 1.5rem;
+    // margin-bottom: 12px;
+    cursor: pointer;
+    // font-size: 22px;
+    // -webkit-user-select: none;
+    // -moz-user-select: none;
+    // -ms-user-select: none;
+    // user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.custom-checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    // height: 25px;
+    // width: 25px;
+    // background-color: #eee;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.custom-checkbox input:checked ~ .checkmark:after { display: block }
+
+/* Style the checkmark/indicator */
+.custom-checkbox .checkmark:after {
+  left: 4px;
+  top: -3px;
+  width: 9px;
+  height: 16px;
+  border: solid black;
+  border-width: 0 4px 4px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
