--- a/src/styles/utilities/_border.css
+++ b/src/styles/utilities/_border.css
@@ -7,7 +7,7 @@ Adapted from: http://tachyons.io/docs/themes/borders/
 
 */
 
-@variants responsive, hover, focus {
+@variants responsive, hover, focus, group-hover {
 
   .ba { border-style: solid;        border-width: 1px; }
   .bt { border-top-style: solid;    border-top-width: 1px; }
