--- a/src/styles/utilities/_font-size.css
+++ b/src/styles/utilities/_font-size.css
@@ -7,9 +7,9 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_type-sca
 
 */
 
-@variants responsive, hover, focus {
+@variants responsive, hover, focus, group-hover {
 
-.f1            { font-size: var(--font-size-1) }
+  .f1            { font-size: var(--font-size-1) }
   .f2            { font-size: var(--font-size-2) }
   .f3            { font-size: var(--font-size-3) }
   .f4            { font-size: var(--font-size-4) }
@@ -17,9 +17,10 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_type-sca
   .f6            { font-size: var(--font-size-6) }
   .f7            { font-size: var(--font-size-7) }
 
-  .f-4           { font-size: 4rem}
-  .f-5           { font-size: 5rem}
-  .f-6           { font-size: 6rem}
+  .f-3p5         { font-size: 3.5rem }
+  .f-4           { font-size: 4rem }
+  .f-5           { font-size: 5rem }
+  .f-6           { font-size: 6rem }
 
   .f-headline    { font-size: var(--font-size-headline) }
   .f-subheadline { font-size: var(--font-size-subheadline) }
