--- a/src/styles/utilities/_object-position.css
+++ b/src/styles/utilities/_object-position.css
@@ -7,7 +7,7 @@ Used to adapt inline images to their dimensions.
 
 */
 
-@variants responsive, hover, focus {
+@variants responsive, hover, focus, group-hover {
 
   .object-center { 
     background-repeat: no-repeat;
