--- a/src/styles/utilities/_svg.css
+++ b/src/styles/utilities/_svg.css
@@ -7,7 +7,7 @@ Adapted from: https://tailwindcss.com/docs/svg
 
 */
 
-@variants responsive, hover, focus {
+@variants responsive, hover, focus, group-hover {
 
   .fill-current   { fill: currentColor }
   .stroke-current { stroke: currentColor }
