--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -922,6 +922,30 @@ Add all new styles here (reset, plugin, utility, component) so they are easy to 
  *
  */
 
+.f8 {
+  font-size: .625rem;
+}
+
+@media (max-width: 25em) {
+  .xxxs-f8 {
+    font-size: .625rem;
+  }
+}
+
+@media (min-width: 25em) and (max-width: 30em) {
+  .xxs-f7 {
+    font-size: .75rem;
+    font-size: var(--font-size-7);
+  }
+}
+
+@media (min-width: 30em) and (max-width: 36em) {
+  .xs-f6 {
+    font-size: .875rem;
+    font-size: var(--font-size-6);
+  }
+}
+
 /*
  *
  * Plugins
@@ -1400,14 +1424,14 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   border-radius: var(--border-radius-4);
   background-color: #000;
   background-color: var(--black);
-  padding-top: .5rem;
-  padding-top: var(--spacing-2);
-  padding-bottom: .5rem;
-  padding-bottom: var(--spacing-2);
-  padding-left: 1rem;
-  padding-left: var(--spacing-3);
-  padding-right: 1rem;
-  padding-right: var(--spacing-3);
+  padding-top: .25rem;
+  padding-top: var(--spacing-1);
+  padding-bottom: .25rem;
+  padding-bottom: var(--spacing-1);
+  padding-left: .5rem;
+  padding-left: var(--spacing-2);
+  padding-right: .5rem;
+  padding-right: var(--spacing-2);
   line-height: 1;
   text-transform: uppercase;
   letter-spacing: .1em;
@@ -1421,6 +1445,19 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   color: #000;
   color: var(--black);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .08);
+}
+
+@media (min-width: 48em) {
+  .poker-link {
+    padding-top: .5rem;
+    padding-top: var(--spacing-2);
+    padding-bottom: .5rem;
+    padding-bottom: var(--spacing-2);
+    padding-left: 1rem;
+    padding-left: var(--spacing-3);
+    padding-right: 1rem;
+    padding-right: var(--spacing-3);
+  }
 }
 
 /*
@@ -5123,13 +5160,11 @@ Used to adapt inline images to their dimensions.
 */
 
 .object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 /*
@@ -11331,6 +11366,10 @@ Adapted from: http://tachyons.io/docs/debug-grid/
 /* @import './utilities/debug'; */
 
 @media (min-width: 36em) {
+  .sm\:f8 {
+    font-size: .625rem;
+  }
+
   .sm\:f-10 {
     font-size: 10rem;
   }
@@ -20085,6 +20124,10 @@ See:  https://stackoverflow.com/questions/35351706/how-to-render-a-multi-line-te
 }
 
 @media (min-width: 48em) {
+  .md\:f8 {
+    font-size: .625rem;
+  }
+
   .md\:f-10 {
     font-size: 10rem;
   }
@@ -28839,6 +28882,10 @@ See:  https://stackoverflow.com/questions/35351706/how-to-render-a-multi-line-te
 }
 
 @media (min-width: 62em) {
+  .lg\:f8 {
+    font-size: .625rem;
+  }
+
   .lg\:f-10 {
     font-size: 10rem;
   }
@@ -37593,6 +37640,10 @@ See:  https://stackoverflow.com/questions/35351706/how-to-render-a-multi-line-te
 }
 
 @media (min-width: 75em) {
+  .xl\:f8 {
+    font-size: .625rem;
+  }
+
   .xl\:f-10 {
     font-size: 10rem;
   }
