--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1366,10 +1366,11 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 
 .link-inline {
   transition: all .2s ease-in-out;
-  border-bottom: 1px solid #2eec96;
-  border-bottom: 1px solid var(--green);
-  box-shadow: inset 0 -2px 0 0 #2eec96;
-  box-shadow: inset 0 -2px 0 0 var(--green);
+  border-bottom: .05em solid #2eec96;
+  border-bottom: .05em solid var(--green);
+  box-shadow: inset 0 -.1em 0 0 #2eec96;
+  box-shadow: inset 0 -.1em 0 0 var(--green);
+  /* box-shadow: inset 0 -2px 0px 0px var(--green); */
 }
 
 .link-inline:hover {
