--- a/src/styles/components/components.css
+++ b/src/styles/components/components.css
@@ -103,8 +103,9 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 .link-inline { 
   @apply .animate;
 
-  border-bottom: 1px solid var(--green);
-  box-shadow: inset 0 -2px 0px 0px var(--green);
+  border-bottom: .05em solid var(--green);
+  box-shadow: inset 0 -.1em 0px 0px var(--green);
+  /* box-shadow: inset 0 -2px 0px 0px var(--green); */
 
   &:hover { box-shadow: inset 0 -12px 0px 0px var(--green) }
 }
