--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1374,8 +1374,8 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 }
 
 .link-inline:hover {
-  box-shadow: inset 0 -12px 0 0 #2eec96;
-  box-shadow: inset 0 -12px 0 0 var(--green);
+  box-shadow: inset 0 -.6em 0 0 #2eec96;
+  box-shadow: inset 0 -.6em 0 0 var(--green);
 }
 
 [data-action="raise"] {
