--- a/src/styles/components/components.css
+++ b/src/styles/components/components.css
@@ -107,5 +107,5 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   box-shadow: inset 0 -.1em 0px 0px var(--green);
   /* box-shadow: inset 0 -2px 0px 0px var(--green); */
 
-  &:hover { box-shadow: inset 0 -12px 0px 0px var(--green) }
+  &:hover { box-shadow: inset 0 -.6em 0px 0px var(--green) }
 }
