--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1367,7 +1367,7 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 .link-inline {
   display: inline-block;
   transition: all .2s ease-in-out;
-  /* can add .dib to control line-height, but then it won't line-break */
+  /* WARNING: .dib enables line-height, but prevents line-break */
   border-bottom: 1px solid #2eec96;
   border-bottom: 1px solid var(--green);
   box-shadow: inset 0 -2px 0 0 #2eec96;
