--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1380,88 +1380,7 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   box-shadow: inset 0 -10px 0 0 var(--green);
 }
 
-[data-action="raise"] {
-  background-color: #ff725c;
-  background-color: var(--light-red);
-}
-
-[data-action="raiseOrCall"] {
-  background-color: #ffa3d7;
-  background-color: var(--light-pink);
-}
-
-[data-action="raiseOrFold"] {
-  background-color: #ff725c;
-  background-color: var(--light-red);
-  opacity: .5;
-}
-
-[data-action="call"] {
-  background-color: #2eec96;
-  background-color: var(--green);
-}
-
-[data-action="callOrFold"] {
-  background-color: #2eec96;
-  background-color: var(--green);
-  opacity: .5;
-}
-
-[data-action="raiseCallOrFold"] {
-  background-color: #96ccff;
-  background-color: var(--light-blue);
-}
-
-[data-action="fold"] {
-  background-color: #ccc;
-  background-color: var(--moon-gray);
-  opacity: .2;
-}
-
-.poker-link {
-  margin-bottom: .5rem;
-  margin-bottom: var(--spacing-2);
-  border-color: #000;
-  border-color: var(--black);
-  border-radius: 1rem;
-  border-radius: var(--border-radius-4);
-  background-color: #000;
-  background-color: var(--black);
-  padding-top: .25rem;
-  padding-top: var(--spacing-1);
-  padding-bottom: .25rem;
-  padding-bottom: var(--spacing-1);
-  padding-left: .5rem;
-  padding-left: var(--spacing-2);
-  padding-right: .5rem;
-  padding-right: var(--spacing-2);
-  line-height: 1;
-  text-transform: uppercase;
-  letter-spacing: .1em;
-  color: #fff;
-  color: var(--white);
-}
-
-.poker-link:hover {
-  background-color: #2eec96;
-  background-color: var(--green);
-  color: #000;
-  color: var(--black);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .08);
-}
-
-@media (min-width: 48em) {
-  .poker-link {
-    padding-top: .5rem;
-    padding-top: var(--spacing-2);
-    padding-bottom: .5rem;
-    padding-bottom: var(--spacing-2);
-    padding-left: 1rem;
-    padding-left: var(--spacing-3);
-    padding-right: 1rem;
-    padding-right: var(--spacing-3);
-  }
-}
+/* @import './components/poker.css'; */
 
 /*
  *
