--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,7 +32,7 @@
  */
 
 @import './components/components.css';
-@import './components/poker.css';
+/* @import './components/poker.css'; */
 
 /*
  *
