--- a/src/styles/utilities/_font-family.css
+++ b/src/styles/utilities/_font-family.css
@@ -9,14 +9,22 @@ Adapted from:
 
 */
 
+/* See: http://markdotto.com/2018/02/07/github-system-fonts/ */
 .sans-serif { 
-  font-family: system-ui, BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif 
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 }
+
 .serif { 
-  font-family: Constantia, 'Lucida Bright', Lucidabright, 'Lucida Serif', Lucida, 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', Georgia, serif 
+  font-family: Constantia, 'Lucida Bright', Lucidabright, 'Lucida Serif', Lucida, 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', Georgia, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 }
-.system-sans-serif { font-family: sans-serif }
-.system-serif      { font-family: serif }
+
+.system-sans-serif { 
+  font-family: sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.system-serif { 
+  font-family: serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
 
 /*
  *
@@ -25,8 +33,13 @@ Adapted from:
  */
 
 code,
-.mono { font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace }
-.courier { font-family: 'Courier New', courier, monospace }
+.mono { 
+  font-family: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.courier { 
+  font-family: 'Courier New', courier, monospace, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
+}
 
 /*
  *
@@ -34,9 +47,25 @@ code,
  *
  */
 
-.avenir    { font-family: 'avenir next', avenir, sans-serif }
-.helvetica { font-family: 'helvetica neue', helvetica, sans-serif }
-.raleway   { font-family: Raleway, sans-serif }
+.abeezee { 
+  font-family: ABeeZee, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.avenir { 
+  font-family: 'avenir next', avenir, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.helvetica { 
+  font-family: 'helvetica neue', helvetica, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.josefin-sans { 
+  font-family: 'Josefin Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.raleway { 
+  font-family: Raleway, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
 
 /*
  *
@@ -44,10 +73,40 @@ code,
  *
  */
 
-.athelas     { font-family: athelas, georgia, serif }
-.baskerville { font-family: baskerville, serif }
-.bodoni      { font-family: 'Bodoni MT', serif }
-.calisto     { font-family: 'Calisto MT', serif }
-.garamond    { font-family: garamond, serif }
-.georgia     { font-family: georgia, serif }
-.times       { font-family: times, serif }
+.athelas { 
+  font-family: athelas, georgia, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.baskerville { 
+  font-family: baskerville, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.bodoni { 
+  font-family: 'Bodoni MT', serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.calisto { 
+  font-family: 'Calisto MT', serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.garamond { 
+  font-family: garamond, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.georgia { 
+  font-family: georgia, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.times { 
+  font-family: times, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+/*
+ *
+ * Cursive
+ *
+ */
+
+.lobster { 
+  font-family: 'Lobster', cursive, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
