--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1186,6 +1186,40 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   }
 }
 
+.btn-green {
+  border-width: .125rem;
+  border-width: var(--border-width-1);
+  border-color: rgba(0, 0, 0, .2);
+  border-color: var(--black-20);
+  background-color: #2eec96;
+  background-color: var(--green);
+  padding-top: .5rem;
+  padding-top: var(--spacing-2);
+  padding-bottom: .5rem;
+  padding-bottom: var(--spacing-2);
+  padding-left: 1rem;
+  padding-left: var(--spacing-3);
+  padding-right: 1rem;
+  padding-right: var(--spacing-3);
+  line-height: 1;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  transition: all .2s ease-in-out;
+}
+
+.btn-green:hover {
+  border-color: #000;
+  border-color: var(--black);
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+}
+
+@media (min-width: 36em) {
+  .btn-green {
+    font-size: 1.25rem;
+    font-size: var(--font-size-4);
+  }
+}
+
 /* 
  *
  * Containers
