Rename font-family to see if that affects whether it downloads in the Network tab

--- a/src/styles/utilities/_font-family.css
+++ b/src/styles/utilities/_font-family.css
@@ -25,5 +25,5 @@ Adapted from:
  */
 
 .avenir { 
-  font-family: 'avenir next', avenir, sans-serif 
+  font-family: 'Avenir Next', Avenir, sans-serif 
 }
