Replace font preloading (to test in IE/Edge)

--- a/src/styles/utilities/_font-family.css
+++ b/src/styles/utilities/_font-family.css
@@ -10,20 +10,7 @@ Adapted from:
 */
 
 /* See: http://markdotto.com/2018/02/07/github-system-fonts/ */
-.sans-serif { 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif
-}
-
-.serif { 
-  font-family: Constantia, 'Lucida Bright', Lucidabright, 'Lucida Serif', Lucida, 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', Georgia, serif
-}
-
-/*
- *
- * Sans-serif
- *
- */
 
 .avenir { 
-  font-family: 'Avenir Next', Avenir, sans-serif 
+  font-family: 'Avenir Next', Avenir, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif
 }
