--- a/src/styles/base/_reset.css
+++ b/src/styles/base/_reset.css
@@ -19,21 +19,28 @@
  * 
  */
 
+html {
+  font-size: 16px;
+  @media (--sm) { font-size: 17px }
+  @media (--md) { font-size: 18px }
+  @media (--lg) { font-size: 19px }
+}
+
 html,
 body {
   min-height: 100vh;
   overflow-x: hidden;
 
   /* Font-size */
-  @media (--sm) { font-size: calc(16.5 / 16 * 1rem) }
+  /* @media (--sm) { font-size: calc(16.5 / 16 * 1rem) }
   @media (--md) { font-size: calc(17 / 16 * 1rem) }
-  @media (--lg) { font-size: calc(17.5 / 16 * 1rem) }
+  @media (--lg) { font-size: calc(17.5 / 16 * 1rem) } */
     
   /* Font-smoothing */
-  -webkit-font-smoothing: antialiased;
+  /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  -moz-font-feature-settings: "liga" on;
+  -moz-font-feature-settings: "liga" on; */
 }
 
 /* 
