--- a/src/styles/base/_reset.css
+++ b/src/styles/base/_reset.css
@@ -23,7 +23,7 @@ html {
   font-size: 16px;
   @media (--sm) { font-size: 17px }
   @media (--md) { font-size: 18px }
-  @media (--lg) { font-size: 19px }
+  /* @media (--lg) { font-size: 19px } */
 }
 
 html,
